hphp/test/slow/enum-invalid-base/maybe_keyset.php.expectf
Fatal error: Invalid base type for enum MyEnum in %s/slow/enum-invalid-base/maybe_keyset.php on line 3
